feat: add role router, controller and repository
